# Relationship-Intelligence-CRM

./: .gitignore  contacts.csv.txt  main.py  pyproject.toml
apps/ai/: prompts.py  providers.py  services.py  tasks.py
apps/audit/: admin.py  models.py  serializers.py  services.py
apps/audit/migrations/: 0001_initial.py
apps/authentication/: serializers.py  services.py  urls.py  views.py
apps/companies/: admin.py  models.py  urls.py  views.py
apps/companies/migrations/: 0001_initial.py
apps/contacts/: admin.py  email_service.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/contacts/migrations/: 0001_initial.py  0002_contact_deleted_at_contact_is_deleted.py  0003_contact_relationship_score.py  0004_contact_ai_summary.py  0005_contact_ai_follow_up_suggestions.py  0006_remove_contact_ai_follow_up_suggestions_and_more.py
apps/integrations/: admin.py  models.py
apps/integrations/migrations/: 0001_initial.py  0002_alter_googleaccount_options.py
apps/interactions/: admin.py  models.py  serializers.py  urls.py  views.py
apps/interactions/migrations/: 0001_initial.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py  0002_user_google_access_token.py  0003_remove_user_google_access_token.py
config/: __init__.py  celery.py  settings.py  urls.py
