[project]
name = "relationship-intelligence-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-celery-beat>=2.9.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1.4.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
]
